; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-pre.c_ipu_pre_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-pre.c_ipu_pre_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipu_pre = type { i32, i64 }

@EBUSY = common dso_local global i32 0, align 4
@IPU_PRE_CTRL = common dso_local global i64 0, align 8
@IPU_PRE_CTRL_HANDSHAKE_ABORT_SKIP_EN = common dso_local global i32 0, align 4
@IPU_PRE_CTRL_HANDSHAKE_EN = common dso_local global i32 0, align 4
@IPU_PRE_CTRL_TPR_REST_SEL = common dso_local global i32 0, align 4
@IPU_PRE_CTRL_SDW_UPDATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipu_pre_get(%struct.ipu_pre* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ipu_pre*, align 8
  %4 = alloca i32, align 4
  store %struct.ipu_pre* %0, %struct.ipu_pre** %3, align 8
  %5 = load %struct.ipu_pre*, %struct.ipu_pre** %3, align 8
  %6 = getelementptr inbounds %struct.ipu_pre, %struct.ipu_pre* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @EBUSY, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %35

12:                                               ; preds = %1
  %13 = load %struct.ipu_pre*, %struct.ipu_pre** %3, align 8
  %14 = getelementptr inbounds %struct.ipu_pre, %struct.ipu_pre* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @IPU_PRE_CTRL, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @writel(i32 0, i64 %17)
  %19 = load i32, i32* @IPU_PRE_CTRL_HANDSHAKE_ABORT_SKIP_EN, align 4
  %20 = load i32, i32* @IPU_PRE_CTRL_HANDSHAKE_EN, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @IPU_PRE_CTRL_TPR_REST_SEL, align 4
  %23 = or i32 %21, %22
  %24 = load i32, i32* @IPU_PRE_CTRL_SDW_UPDATE, align 4
  %25 = or i32 %23, %24
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.ipu_pre*, %struct.ipu_pre** %3, align 8
  %28 = getelementptr inbounds %struct.ipu_pre, %struct.ipu_pre* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @IPU_PRE_CTRL, align 8
  %31 = add nsw i64 %29, %30
  %32 = call i32 @writel(i32 %26, i64 %31)
  %33 = load %struct.ipu_pre*, %struct.ipu_pre** %3, align 8
  %34 = getelementptr inbounds %struct.ipu_pre, %struct.ipu_pre* %33, i32 0, i32 0
  store i32 1, i32* %34, align 8
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %12, %9
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
